test/lambda/negative/runtime/invalid_operation.ls
// @expect-error: E305
// @description: Invalid type for operation

let x = [1, 2, 3] / 2
